@@ -8,6 +8,7 @@ config NSH_LIBRARY
 	default n
 	select NETUTILS_NETLIB if NET
 	select LIBC_NETDB if NET
+	select READLINE_HAVE_EXTMATCH
 	---help---
 		Build the NSH support library.  This is used, for example, by
 		examples/nsh in order to implement the full NuttShell (NSH).
