@@ -1055,4 +1055,49 @@ void nsh_usbtrace(void);
 #  endif
 #endif
 
+/****************************************************************************
+ * Name: nsh_extmatch_count
+ *
+ * Description:
+ *   This support function is used to provide support for realine tab-
+ *   completion logic  nsh_extmatch_count() counts the number of matching
+ *   nsh command names
+ *
+ * Input Parameters:
+ *   name    - A point to the name containing the name to be matched.
+ *   matches - A table is size CONFIG_READLINE_MAX_EXTCMDS that can
+ *             be used to remember matching name indices.
+ *   namelen - The lenght of the name to match
+ *
+ * Returned Values:
+ *   The number commands that match to the first namelen characters.
+ *
+ ****************************************************************************/
+
+#if defined(CONFIG_NSH_READLINE) && defined(CONFIG_READLINE_TABCOMPLETION) && \
+    defined(CONFIG_READLINE_HAVE_EXTMATCH)
+int nsh_extmatch_count(FAR char *name, FAR int *matches, int namelen);
+#endif
+
+/****************************************************************************
+ * Name: nsh_extmatch_getname
+ *
+ * Description:
+ *   This support function is used to provide support for realine tab-
+ *   completion logic  nsh_extmatch_getname() will return the full command
+ *   string from an index that was previously saved by nsh_exmatch_count().
+ *
+ * Input Parameters:
+ *   index - The index of the command name to be returned.
+ *
+ * Returned Values:
+ *   The numb
+ *
+ ****************************************************************************/
+
+#if defined(CONFIG_NSH_READLINE) && defined(CONFIG_READLINE_TABCOMPLETION) && \
+    defined(CONFIG_READLINE_HAVE_EXTMATCH)
+FAR const char *nsh_extmatch_getname(int index);
+#endif
+
 #endif /* __APPS_NSHLIB_NSH_H */
